# deepseek-balance

./: .gitignore  README.md  README.zh-CN.md  build.sh  install.sh
DeepSeekBalance/Resources/: Info.plist
DeepSeekBalance/Sources/: AppDelegate.swift  BalanceService.swift  KeychainService.swift  MenuBarController.swift  SettingsWindowController.swift
deepseek-balance-win/: Cargo.toml  README.md  README.zh-CN.md  build.bat
deepseek-balance-win/src/: balance.rs  main.rs  settings.rs  storage.rs  tray.rs
